fixed column alignment

--- a/final-capstone-project/src/main/webapp/css/site.css
+++ b/final-capstone-project/src/main/webapp/css/site.css
@@ -31,6 +31,26 @@ margin-top: 0%;
 color: #97a6a7;
 }
 
+/**********************
+Sample snippet page
+***********************/
+
+#pageContent {
+	padding-left: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+#sample_snippets_description {
+	padding-left: 35px;
+}
+
+#sample_snippets_attribution {
+	padding-left: 25px;
+}
+
+/*********************/
+
 #testing { 
 color: whitesmoke;
 font-weight: bold;
@@ -129,15 +149,20 @@ text-align: left;
 .tableheaders {
 text-align: left;
 font-weight: bold;
+padding-left: 20px;
 }
 .tabledata {
 text-align: left;
+padding-left: 20px;
+padding-bottom: 7px;
 }
 .tabledata2 {
 text-align: left;
+padding-left: 15px;
 }
 
 .tableproperties {
+	padding-left: 5px;
 width: 90%;
 }
 .inputlabel {
